--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-gesture-handler": "2.12.0",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-redux": "^9.1.1"
