--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start --port 8082",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -19,6 +19,8 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-reanimated": "^3.9.0-rc.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-redux": "^9.1.1"
@@ -28,6 +30,7 @@
     "@babel/plugin-transform-private-methods": "^7.24.1",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.74.81",
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
