--- a/ios/SiyaInfotech/Info.plist
+++ b/ios/SiyaInfotech/Info.plist
@@ -32,8 +32,12 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+   <key>NSLocationWhenInUseUsageDescription</key>
+    	<string>$(PRODUCT_NAME) will precise location is used to deliver product on your are </string>
+    	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    	<string>$(PRODUCT_NAME) will precise location is used to deliver product on your are</string>
+    	<key>NSLocationAlwaysUsageDescription</key>
+          <string>$(PRODUCT_NAME) will precise location is used to deliver product on your area</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
