--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@reduxjs/toolkit": "^2.2.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
@@ -23,8 +22,7 @@
     "react-native-gesture-handler": "^2.16.0",
     "react-native-reanimated": "^3.9.0-rc.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
-    "react-redux": "^9.1.1"
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
